--- a/Lab3/.gitignore
+++ b/Lab3/.gitignore
@@ -2,6 +2,8 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+!src/input
+!src/output
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
