--- a/Lab3/src/main/resources/application.properties
+++ b/Lab3/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
-spring.datasource.password=1203
+spring.datasource.password=meow1234
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.jpa.database=postgresql
 spring.jpa.hibernate.ddl-auto=update
@@ -8,3 +8,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 server.port=8080
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+
