--- a/Lab3/src/main/resources/application.properties
+++ b/Lab3/src/main/resources/application.properties
@@ -10,4 +10,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 server.port=8080
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
+spring.jackson.date-format=yyyy-MM-dd'T'HH:mm:ss.SSS
+spring.jackson.time-zone=UTC
+
 
