--- a/Lab7/back/src/main/resources/application.properties
+++ b/Lab7/back/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
-spring.datasource.password=1203
+spring.datasource.password=meow1234
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.jpa.database=postgresql
 spring.jpa.hibernate.ddl-auto=update
